# ChangeLog for app-text/hunspell
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/hunspell/ChangeLog,v 1.102 2011/12/29 20:42:20 halcy0n Exp $

  29 Dec 2011; Mark Loeser <halcy0n@gentoo.org> hunspell-1.3.2-r3.ebuild:
  Stable for ppc/ppc64; bug #379045

  21 Dec 2011; Markus Meier <maekke@gentoo.org> hunspell-1.3.2-r3.ebuild:
  arm stable, bug #379045

  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  hunspell-1.3.2-r3.ebuild:
  x86 stable wrt bug #379045

  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> hunspell-1.3.2-r3.ebuild:
  Stable for HPPA (bug #379045).

  17 Dec 2011; Agostino Sarubbo <ago@gentoo.org> hunspell-1.3.2-r3.ebuild:
  Stable for AMD64, wrt bug #379045

  17 Dec 2011; Peter Volkov <pva@gentoo.org> hunspell-1.3.2-r3.ebuild:
  move gettext to DEPEND, bug 392049 thank nzqr for report.

  06 Nov 2011; Brent Baude <ranger@gentoo.org> hunspell-1.3.2-r1.ebuild:
  Marking hunspell-1.3.2-r1 ppc for bug 379045

  12 Oct 2011; Raúl Porcel <armin76@gentoo.org> hunspell-1.3.2-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #379045

  09 Oct 2011; Markus Meier <maekke@gentoo.org> hunspell-1.3.2-r1.ebuild:
  arm stable, bug #379045

  21 Sep 2011; Jeroen Roovers <jer@gentoo.org> hunspell-1.3.2-r1.ebuild:
  Stable for HPPA (bug #379045).

  17 Sep 2011; Thomas Kahle <tomka@gentoo.org> +hunspell-1.3.2-r1.ebuild:
  Resurrect latest stable version for amd64/x86

*hunspell-1.3.2-r3 (17 Sep 2011)

  17 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -hunspell-1.3.2-r1.ebuild, +hunspell-1.3.2-r3.ebuild,
  files/hunspell-1.3.2-static-lib.patch:
  Revision bump again, after discussion rather do not make the libparsers
  shared but not installed.

  16 Sep 2011; Tony Vroon <chainsaw@gentoo.org> hunspell-1.3.2-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #379045.

  15 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>