@@ -13,23 +13,13 @@ EBUILD hunspell-1.2.11.ebuild 2615 RMD160 28bdaebc816b9f9ac3be681c3da9873a958b34
 EBUILD hunspell-1.2.12-r1.ebuild 2703 RMD160 7db6db5440c1b8b963f1e3b0ec8bc789d7cbec00 SHA1 58c122d5033a377611153847a0c9766e4e54a303 SHA256 e0d971af58b91413674d267543112143e24c3614fa11b443c09f646f4aa69cd7
 EBUILD hunspell-1.3.2-r1.ebuild 2781 RMD160 f9bd9624968134fc612747151c0f90964d949d3f SHA1 1defb0fc43e729748becdaf93790b7131e151704 SHA256 9168f551658d93e6c6570561ee519b08ce0f92073db7c4e5b70a27e8e9ae5071
 EBUILD hunspell-1.3.2-r2.ebuild 2700 RMD160 9c5dac2b6e8c87ec714f86911a04b2d594d71190 SHA1 35ec80ce68dbe2ef94ff7c143f11b02b93445a33 SHA256 58da476e7e9e3e7889553ab89fa82f890ee5636dd75635976437d9e88321a6a3
-EBUILD hunspell-1.3.2-r3.ebuild 2692 RMD160 fb9f42fe12e1f2c57804028fd165eb1ebc121230 SHA1 1b12a31cb223146942aec81268a2d98bdbb1eb79 SHA256 1b5de2421a28c8b8f6391d1984ae2303ccf9e7c87f7154dcef63fc1928c9d833
-MISC ChangeLog 14667 RMD160 b44a0186996718046648ff3d3e86ac870994fe1c SHA1 ea98294604db46df0bfd20fbd4a6be6c35b384a4 SHA256 831ffcfd5266ee519490011052cdeca5bcac1642aaddc287f43fde87557af1f5
+EBUILD hunspell-1.3.2-r3.ebuild 2688 RMD160 dd3b9da53766ccf3b99ace9e19aeef39783c1d15 SHA1 9a7734525f41d65293c6df228cf4357d9fbcbf36 SHA256 67bf3e3b4c102a365a3fda6945ba8f69c3451d04b78ddce4aa3363c2bae08b59
+MISC ChangeLog 14784 RMD160 0955d0d6fdfd6a948b67b05f280fe9ea246d858a SHA1 1a541a667ba9f9eab4ee5fd9eae2283ae58f4560 SHA256 1ea22e933b727c9e2fe530c18aa7b845d6150621c2d48b4b487525803b881c91
 MISC metadata.xml 163 RMD160 444608d5dce1eb9307c253140c5f6b011fcbece8 SHA1 87029f6d4a8e381a59cad5f8553f0e5163b11a7e SHA256 2a83bf864655c5acb5d551aeb9b060d57545fb7cf1dd9d7fcdc16fbca221cabb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJO/NCyAAoJEPTTRK0uRVaNO4IP/AquAaaYOvQ5ESAUo35O9MP/
-ubH9+QOo0u3Pqlu0oN0gVRmDhbPmNdufjXjRkY2DSpWt6pZuAWK7bMwegEx6TCg+
-41/XqRVokR244rZ+bGLfN1Ye13zFtPLeLTMHkwwqFMC+iVKE4CtxSwBzj91B8LVf
-hrqm7NPXyRRRgooU5qDXJEnChxSotDbqfkxTtfu/bzE3UcMYC1mMgybWy1reJOI9
-liqI+wleiyENa/gJFQWOA4XKfh4zs4lD6XreDSjA+EGr1TiY6nK5PN3zgVPfINuR
-guWom2RZd7FKNZwa4h6YiQZrZpoGgUL3DfGhfERtZyWGa2sFx02U1xMOpG1ah2gP
-/vVsQh/I0uBC9+/SsSZRRaTnjlWKRblvXPBczTkYCmBHSBUkMeZf/UWJfK7KuM25
-JM16yVhacZdLmprHEIZftWDc7Hlh/uADLjCSGIozaaSaEs+iLw24Czg4+cFSlpFC
-ICyGIYVOis6YN4hm/P0cOEbpnEwWD9apqXwkYs50e1W0sg3EkO+M+w4b+fm7wLCJ
-wcIvxaqZLYdZdb62UNc0kms8RuthMH5ILf0Do4fNhRekW8bGKF8T+xcIJL9sN1dL
-8FASuOQ88luO5IZsV6SBUnISIBrZPZsny/wkuAIS5WFkkhp0hzsdYRbzsZi2U6xR
-oJHvxd2tLg4ocdxaYmzc
-=GQ8R
+iEYEARECAAYFAk8R1zEACgkQuQc30/atMkBlvACgm/OI1J5sqz5ZRotm+VdkX3Wl
+qvQAnA5DfwKUYOP0HqhIZYIJebX9Dj/g
+=hUoe
 -----END PGP SIGNATURE-----
