@@ -1,8 +1,6 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX stardict-2.4.8-ClipboardReceivedCallback.patch 669 RMD160 051e058f3c5cb174ecb461d4ae67115eca26c5e7 SHA1 d65226bef41e19b85114869a434c635b4cdee515 SHA256 c38927160ed618728db391033397801ffd1850c0aeaa98caa4cf4441a668d459
-AUX stardict-2.4.8-floatwin-disappear.patch 591 RMD160 334bc9fce6f765c17ac38c0bbf95ed2b1ba86803 SHA1 ad7ff07266de13c958bcdad08538a2327d1fc255 SHA256 a9b6d4269bc546004fa0535b5562b733de6f502483deb9346f1a40fe4a3026f6
 AUX stardict-3.0.1-changelog-minor-typo-fixes.patch 3415 RMD160 b6938e9a0f1272863187770bf5a893d239eb0c9a SHA1 117bcf2eb2478a932b9b0535cb06012a04e50293 SHA256 36543e608207de14eafd8b943afd855fe718856ede1c3c13a8e0a0808c6ef0b0
 AUX stardict-3.0.1-configure.in-EST.diff 459 RMD160 d8d3de801eedbab337fab87d7cb1e60be2517805 SHA1 85f56191176cd16fa2c13e951ce05f7bfb708c33 SHA256 cad6dcbb615b90d4e14e7578f53efcf8c78c3f36d7ba20a66dedef3a260510c5
 AUX stardict-3.0.1-gcc43.patch 12626 RMD160 068e8af4430d0c137fe41664fcae12053aec5ef3 SHA1 cd15116ac9a74ed4847fe0149a5093e6e36fef7b SHA256 49a7db8765b3add63c7774237903b7bcc5c6df8e713d00ee14a067877a695bf3
@@ -24,23 +22,16 @@ DIST stardict-3.0.3.tar.bz2 9147947 RMD160 4c63f3cf439a7c34829b371e75c16db97fb35
 EBUILD stardict-3.0.1-r2.ebuild 3017 RMD160 168ab2d96d29c8ba885490df95979a9a2248448f SHA1 28e4b1c7dc1869417f73caa081e003d9aebc34df SHA256 8973818ddc44c55299a81689d9170f4e89391fed52fd6ec7d40d89de20a9cab3
 EBUILD stardict-3.0.1-r3.ebuild 3097 RMD160 66d440cd319ed8c18b25fa478a9226b3e4211d3e SHA1 ee1949068fe6958f62765f600f652cffbf8045d0 SHA256 0ed1034a63f2d10c97ccbc18d8521ffb001d54247b5d6696df976ad5af6c592e
 EBUILD stardict-3.0.3-r1.ebuild 3118 RMD160 1bac1a8aeae78ba6d8fbd38b7a71ae908caf037c SHA1 9fb6940829506162c240236dbb31ea51213f269e SHA256 d1c9d12e1db00b12c4b1f61f571c228ec9c90f2bfad8930f9ba9ac2124c5b8d4
-EBUILD stardict-3.0.3.ebuild 3028 RMD160 aea42752c1fca8873653d45576bdfc57f91163ef SHA1 ed76b47a481312fe9199325c9414f452af043d8c SHA256 313a6c9cfaf372100017a13b3bd4499246327e77d197483faf0d3e1fa9b504f6
-MISC ChangeLog 12234 RMD160 4b847730f9905c67161784eb35b447cd380fbe3e SHA1 69d0813ea82f87df8eb94008c716b4e8774b79fe SHA256 ad94df305f28e68ea9e7975d64a057f4132310fefdee9a1f8906904eccbe7836
+MISC ChangeLog 12429 RMD160 e7df693613d9b7818ef39d1ed2ecad20fd9dab7e SHA1 073adc1bbafef95403707c34189f33a0df3c7931 SHA256 fcde2fe9c50b50993b2b359d576f5edad656aa41a25b523d91d2787665d78066
 MISC metadata.xml 1118 RMD160 61e3ee3d4ea189024ce2f7fa5c59ac8b758cae82 SHA1 755adaa6d7aad1cea44eb4de65df3156adc59a46 SHA256 c6f8ba52202b6c8383cff2cd2ee0f4fda1a29c9019488fd1cb4369ef400a95a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPEGf4AAoJELEHsLL7fEFWTzAP/1b65lH3ZfWfrymyW65m7T27
-8DJgfasp7Ex3bDdH6Kwtcb5jlucCmrGOj4uywqVd9tn+VF5UX/NHg+n2UdiBFROz
-C5C0l5S1vKoNIApRI2A9QxH30yz9zxoF/oQEpzzmkUTFNOXG3Y6D5imtDYQZ4SUY
-gOFqoKI7WVNwq+/k043MXsq1N0q4RSWHGA3BoRZ/Q+q99Fv59I6W1jdV+U2k072+
-fy4AZuSVeo6dUzZE8hG9iBIhOSVrEnYfRI2MRc8cD8A7TUpjQOHHixcXx0psSK7S
-EkdVM3yoMdWtOLaQie2qaPIvjj4w/dIprMBwYvDvrSFWMkOYflklRfeGpDVDbMeh
-m0+3lYimH16DH/frwuXcpAxqh3iVYL/FbSs27TMf+VO9x3NAnueZ47mlBTrg2L+7
-SI2XcYIr8Uc00KNGAsFgMo1/GCtRn8XXanCtreLjoCDUM+sUPAVcRlS7cOF7a49G
-qQVJ1oPy8TVFU4ccvJoXfAIOoNFbbuMRhhtFESgHXHqVMtRH5ncu2pcR0JZltRgW
-/rDqcwXHEQGvv5l68S4c2cmQU7NZdNjZe2qiEGAxcGucXMvf/4e+V4I6ny1cRtBq
-y23ocDot6bBN1NcnMuWiiwa93q4bgmuTxPiCelYokZ9myKSI+NkOlz9pqw3A/Xxe
-VFt3/GsoYixSm2txss4c
-=Rv2y
+iQEcBAEBAgAGBQJPEddmAAoJEEdUh39IaPFNffEIAJ+3snVvNKoPiGJf38K6TEop
+6pVM5tDZwG0bCJYvR8sN8MfpyuM1UCBSHVrMfnhaLMyArYEzrmxR5mvJZiXE+ZvB
+SB2sHSnyk4AI0Ld8GZVT1n5dxbpddim3ce5dGU7LhT2QstUR2KtkPa3vue3+gxKc
+B1S5mKO89BXxNqxjTH0Q04i0vSX8n30vY6Ap1s1SnkBLuj32+vrT8prIFvyKNgHl
+Qu6e74AIELrBDfmTm/RxZocjNKqgdzb5pb+6/gH8s1KHg/uyzEC+TRF/KuOspSDU
+MDMACI36RBEtJa/41d7mOzGDTG1xKcQPZOzJifhOFGlojqp5EK/g3W1lfULcCtU=
+=fycy
 -----END PGP SIGNATURE-----
