@@ -1,6 +1,9 @@
 # ChangeLog for app-text/hunspell
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/hunspell/ChangeLog,v 1.102 2011/12/29 20:42:20 halcy0n Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/hunspell/ChangeLog,v 1.103 2012/01/14 19:27:39 armin76 Exp $
+
+  14 Jan 2012; Raúl Porcel <armin76@gentoo.org> hunspell-1.3.2-r3.ebuild:
+  alpha/ia64/sh/sparc stable wrt #379045
 
   29 Dec 2011; Mark Loeser <halcy0n@gentoo.org> hunspell-1.3.2-r3.ebuild:
   Stable for ppc/ppc64; bug #379045
